<resources>
    <!--  TODO: Remove unused string resources  -->
    <string name="app_name">CarPoolRoutePlanner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signInButton">Sign in</string>
    <string name="joinGroup">Join Group</string>
    <string name="createGroup">Create Group</string>
    <string name="manageGroup">Manage Group</string>
    <string name="removeGroup">Remove Group</string>
    <string name="inviteMember">Invite Member</string>
    <string name="enterMemberEmail">Enter Member Email</string>
    <string name="enterGroupPassword">Enter Group Password</string>
    <string name="leaveGroup"> Leave Group</string>
    <string name="inviteMembers">Invite Members</string>
    <string name="viewCurrentGroups">View Current Groups</string>
    <string name="removeMember">Remove Member</string>
    <string name="disbandGroups">Disband Group</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="host">Host</string>
    <string name="guest">Guest</string>
    <string name="logout">Log Out</string>
    <string name="stay">Stay</string>
    <string name="GPS">Set GPS Location</string>
    <string name="JoinGroup">Join Group</string>
    <string name="CreateGroup">Create Group</string>
    <string name="ManageGroup">Manage Group</string>
    <string name="ManageRoute">Manage Route</string>
    <string name="StartRoute">Start Route</string>
    <string name="Submit">Submit</string>
    <string name="Username">Username</string>
    <string name="createAcc">Create Account</string>
    <string name="SetRoute">Set Destination For Group</string>
    <string name="EnterPoi">Enter Lat and Long Here (Lat,Long)</string>
    <string name="EnterGid">Enter Group ID Here (ex.456)</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="DeleteGroupDialog">Would you like to delete this group or save it for later use?</string>
    <string name="SendRegDest">Send Reg Dest</string>
    <string name="SendPriorityDest">Send Priority Dest</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_main_menu">Main Menu</string>

    <string name="facebook_app_id">955584248363701</string>
    <string name="fb_login_protocol_scheme">fb955584248363701</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main_group">MainGroupActivity</string>
    <string name="title_home">Home</string>
    <string name="title_group_manage_members">Manage Members</string>
    <string name="title_group_manage_destinations">Manage Destinations</string>
    <string name="title_group_voting">Group Voting</string>
    <string name="submit_location">Submit Location</string>
    <string name="refresh_voting_locations">Refresh Voting Locations</string>
    <string name="submit_location_for_voting">Submit Location For Voting:</string>
    <string name="end_vote">End Vote</string>
    <string name="start_vote">Start Vote</string>
    <string name="location">Location</string>

</resources>