<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.devs.carpoolrouteplanner.ui.group_activity.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_group_manage_destinations"
        android:name="com.devs.carpoolrouteplanner.ui.viewroute.ViewRouteFragment"
        android:label="@string/title_group_manage_destinations"
        tools:layout="@layout/route_recycler_view" />

    <fragment
        android:id="@+id/navigation_group_manage_members"
        android:name="com.devs.carpoolrouteplanner.ui.group_activity.ManageGroupMembersFragment"
        android:label="@string/title_group_manage_members"
        tools:layout="@layout/fragment_manage_group_members" />
</navigation>